# BureauLess

./: .env.test.local.example  .gitignore  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  pyproject.toml
.github/: labels.yml
.github/workflows/: ci.yml
apps/desktop/: package.json  tsconfig.json
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
docs/: README.md  advisor_policy.md  context_economy.md  harness_protocol.md  orchestrator_system_prompt.md  research_and_design_notes.md  task_protocol.md  workbench_tasklist.md  workflow_examples.md
docs/adrs/: README.md
docs/architecture/: context_economy.md  orchestrator_system_prompt.md  research_and_design_notes.md
docs/audits/: 2026-07-02-runtime-execution-gap-analysis.md  2026-07-10-control-runtime-boundary-follow-up-gap-analysis.md  2026-07-11-live-demo-control-plane-bootstrap-gap.md  2026-07-13-agent-provider-compatibility.md  2026-07-15-agent-endpoint-capability-matrix.md  README.md
docs/protocol/: advisor_policy.md  agent_provider_registry.md  harness_protocol.md  workflow_selection_policy.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md
docs/rfcs/: 001-controlled-workflow-mutation.md  002-ledger-evidence-and-progressive-context.md  003-engineering-boundary-refactor.md  004-temporal-replay-mutation-intake-and-retry-control.md  005-authoritative-result-acceptance-spine.md  README.md  (+4 more)
examples/: optimization_dag.json  optimization_dag.yaml
live-demos/: .gitignore  README.md
scripts/: api-dev  live-demo-boundary-run  live_demo_boundary_run.py  mutation-demo-prepare
tests/: test_audit.py  test_core.py  test_harness.py  test_live_demo_boundary_run.py  test_server.py
(+119 files in other folders)
