[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bureauless"
version = "0.4.0"
description = "Local-first control and audit harness for coding-agent runtimes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.115", "PyYAML>=6.0", "uvicorn>=0.32"]

[dependency-groups]
dev = ["httpx>=0.28", "pytest>=9.0"]

[project.scripts]
bureauless = "bureauless.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
norecursedirs = ["runs"]
